--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -54,9 +54,125 @@
         </nav>
         <!-- End Navbar -->
     </header>
-    <div>
-        <i class="fa fa-home"></i> أهلا و مرحبا بكم في المدونة
-    </div>
+    <section>
+        <div class="container">
+            <div class="row mt-4">
+                <div class="col-md-8">
+                    التدوينات
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-3">
+                        <h3 class="text-center bg-secondary text-light p-2">
+                            اخر التدوينات
+                        </h3>
+                        <ul>
+                            <li>
+                                <a href="#">التدوينة الاولى</a>
+                            </li>
+                            <li>
+                                <a href="#">التدوينة الثانية</a>
+                            </li>
+                            <li>
+                                <a href="#">التدوينة الثالثة</a>
+                            </li>
+                            <li>
+                                <a href="#">التدوينة الرابعة</a>
+                            </li>
+                            <li>
+                                <a href="#">التدوينة الخامسة</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card mb-3">
+                        <h3 class="text-center bg-secondary text-light p-2">
+                            اخر التعليقات
+                        </h3>
+                        <ul>
+                            <li>
+                                <a href="#">التعليق الاولى</a>
+                            </li>
+                            <li>
+                                <a href="#">التعليق الثانية</a>
+                            </li>
+                            <li>
+                                <a href="#">التعليق الثالثة</a>
+                            </li>
+                            <li>
+                                <a href="#">التعليق الرابعة</a>
+                            </li>
+                            <li>
+                                <a href="#">التعليق الخامسة</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="bg-secondary">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md">
+                    <div class="card-group mt-3">
+                        <div class="card m-3">
+                            <h4 class="card-title text-center border-bottom p-2 m-3">
+                                من أنا
+                            </h4>
+                            <div class="card-body">
+                                <div class="text-center">
+                                    <img width="35" src="{% static 'blog/images/favicon.ico' %}" alt="">
+                                </div>
+                                من أنا نص تجريبي من أنا نص تجريبي من أنا نص تجريبي من أنا نص تجريبي من أنا نص تجريبي من أنا نص تجريبي من أنا نص تجريبي من أنا نص تجريبي من أنا نص تجريبي من أنا نص تجريبي من أنا نص تجريبي من أنا نص تجريبي من أنا نص تجريبي من أنا نص تجريبي من أنا نص تجريبي
+                                من أنا نص تجريبي
+                            </div>
+                        </div>
+                        <div class="card m-3">
+                            <h4 class="card-title text-center border-bottom p-2 m-3">
+                                مواقع هامة
+                            </h4>
+                            <div class="card-body">
+                                <ul>
+                                    <li>
+                                        <a href="#">المواقع الاولى</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">المواقع الثانية</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">المواقع الثالثة</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">المواقع الرابعة</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">المواقع الخامسة</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card m-3">
+                            <h4 class="card-title text-center border-bottom p-2 m-3">
+                                وسائل التواصل الإجتماعي
+                            </h4>
+                            <h4 class="card-body text-center">
+                                <a class="text-secondary" href=""><i class="fab fa-facebook"></i></a>
+                                <a class="text-secondary" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="text-secondary" href=""><i class="fab fa-instagram"></i></a>
+                                <a class="text-secondary" href=""><i class="fab fa-youtube"></i></a>
+                                <a class="text-secondary" href=""><i class="fab fa-telegram"></i></a>
+                                <a class="text-secondary" href=""><i class="fab fa-linkedin"></i></a>
+                            </h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row p-2">
+                <div class="col-md text-center">
+                    <small class="text-light">&copy; جميع الحقوق محفوظة</small>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="{% static 'blog/js/jquery-3.3.1.slim.min.js' %}"></script>
     <script src="{% static 'blog/js/popper.min.js' %}"></script>
     <script src="{% static 'blog/js/bootstrap.min.js' %}"></script>
