--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{% static 'blog/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/main.css' %}">
-    <link rel="shortcut icon" href="{% static 'blog/images/favicon.ico' %}">
-    <title>Document</title>
+    <link rel="shortcut icon" href="{% static 'blog/images/user.png' %}">
+    <title>Blogger</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <!-- Start Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
-                <img src="{% static 'blog/images/favicon.ico' %}" alt="شعار المدونة" width="30"> مدونة
+                <img src="{% static 'blog/images/user.png' %}" alt="شعار المدونة" width="30"> مدونة
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
