--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -1,12 +1,14 @@
 {% extends 'blog/base.html' %}
 <!--  -->
+{% load static %}
+<!--  -->
 {% block content %}
 <!--  -->
 {% for post in posts %}
-<div class="post p-3 mb-4">
-    <img width="70px" class="im-fluid" src="" alt="صورة الناشر">
-    <span>نشر في {{post.post_date}}</span>
-    <h3><a href="">{{post.title}}</a></h3>
+<div class="border p-3 mb-3">
+    <img class="img-fluid rounded-circle border m-2" src="{% static 'blog/images/user.png' %}" width="70px" alt="صورة الناشر">
+    <span class="text-secondary">نشر في {{post.post_date}}</span>
+    <h3><a class="text-dark" href="">{{post.title}}</a></h3>
     <p>{{post.content}}</p>
 </div>
 {% endfor %}
