--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <!-- Start Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light ">
             <a class="navbar-brand" href="{% url 'home' %}">
                 <img src="{% static 'blog/images/user.png' %}" alt="شعار المدونة" width="30"> مدونة
             </a>
