--- a/src/blog/templates/blog/detail.html
+++ b/src/blog/templates/blog/detail.html
@@ -10,5 +10,22 @@
     <h3>{{post.title}}</h3>
     <p>{{post.content}}</p>
 </div>
+<h2 class="border-bottom mt-5 mb-3">التعليقات ({{comments.count}})</h2>
+{% for comment in comments %}
+<ul class="p-3 comment">
+    <h6 class="border-bottom p-2">
+        ( {{comment.name}} )
+        <span class="text-secondary">
+            {{comment.comment_date|date:'d-m-Y'}}
+        </span>
+    </h6>
+    {{comment.body}}
+</ul>
+{% empty %}
+<h6 class="text-center p-4 comment">
+    لا توجد تعليقات
+</h6>
+<!--  -->
+{% endfor %}
 <!--  -->
 {% endblock content %}
