--- a/src/blog/templates/blog/detail.html
+++ b/src/blog/templates/blog/detail.html
@@ -28,4 +28,11 @@
 <!--  -->
 {% endfor %}
 <!--  -->
+<h3 class="border-bottom pb-3 mb-3 mt-5">إضافة تعليق جديد</h3>
+<form method="POST">
+    {% csrf_token %}
+    <!--  -->
+    {{comment_form.as_p}}
+    <input class="btn btn-secondary mb-4" type="submit" value=" نشر التعليق">
+</form>
 {% endblock content %}
