--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+<!--  -->
+{% load post_tag %}
 <!DOCTYPE html>
 <html lang="ar">
 
@@ -70,13 +72,13 @@
                         <h3 class="text-center bg-secondary text-light p-2">
                             اخر التدوينات
                         </h3>
-                        {% include 'blog/latest_posts.html' %}
+                        {% latest_posts %}
                     </div>
                     <div class="card mb-3">
                         <h3 class="text-center bg-secondary text-light p-2">
                             اخر التعليقات
                         </h3>
-                        {% include 'blog/latest_comments.html' %}
+                        {% latest_comments %}
                     </div>
                 </div>
             </div>
