--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -52,7 +52,7 @@
                         <a class="nav-link" href="">تسجيل الدخول</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">تسجيل</a>
+                        <a class="nav-link" href="{% url 'register' %}">تسجيل</a>
                     </li>
                 </ul>
             </div>
