--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -4,6 +4,14 @@
 <!--  -->
 {% block content %}
 <!--  -->
+{% if messages %}
+<!--  -->
+{% for message in messages %}
+<div class="alert alert-{{message.tags}}">
+    {{message}}
+</div>
+{% endfor %} {% endif %}
+<!--  -->
 {% for post in posts %}
 <div class="border p-3 mb-3">
     <img class="img-fluid rounded-circle border m-2" src="{% static 'blog/images/user.png' %}" width="50px" alt="صورة الناشر">
