--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -49,7 +49,10 @@
                 </ul>
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="">تسجيل الدخول</a>
+                        <a class="nav-link" href="{% url 'login' %}">تسجيل الدخول</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}"> تسجيل الخروج</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'register' %}">تسجيل</a>
