--- a/src/user/templates/user/login.html
+++ b/src/user/templates/user/login.html
@@ -5,15 +5,15 @@
 {% load crispy_forms_tags %}
 <!--  -->
 <div class="border p-4 mb-5">
-    <legend class="border-bottom pb-1 mb-3">التسجيل</legend>
+    <legend class="border-bottom pb-1 mb-3">تسجيل الدخول</legend>
     <form method="POST">
         {% csrf_token %}
         <!--  -->
         {{form|crispy}}
-        <input class="btn btn-secondary mt-4" type="submit" value="تسجيل">
+        <input class="btn btn-secondary mt-4" type="submit" value="تسجيل الدخول">
     </form>
     <div class="border-top mt-4 pt-2">
-        <small>إذا كان لديك حساب من قبل فيمكنك <a href="{% url 'login' %}">تسجيل الدخول</a></small>
+        <small> إذا لم يكن لديك حساب من قبل فيمكنك من هنا.<a href="{% url 'register' %}">التسجيل</a></small>
     </div>
 </div>
 {% endblock content %}
