--- a/src/blog/templates/blog/index.html
+++ b/src/blog/templates/blog/index.html
@@ -10,7 +10,9 @@
 <div class="alert alert-{{message.tags}}">
     {{message}}
 </div>
-{% endfor %} {% endif %}
+{% endfor %}
+<!--  -->
+{% endif %}
 <!--  -->
 {% for post in posts %}
 <div class="border p-3 mb-3">
